--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </div>
       <button id="submit">Submit</button>
     </div>
+     </div>
+      <button id="submit">Submit</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
